# test-task

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: build.yml  test-conda.yml  test-pip.yml
src/optimize/: __init__.py  compute_gradient.py  functionals.pyx  functionals_impl.cpp  functionals_impl.hpp  functionals_impl.pxd  steepest_descent.py
tests/: test_convex_case_cy.py  test_convex_case_py.py  test_functionals.py
tests/optimize/: test_steepest_descent.py
