[metadata]
name = optimize
description = Optimize C++ functions in Python
author = Dmitry Kabanov
license = MIT
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
install_requires =
    numpy
python_requires = >=3.9

[options.extras_require]
dev =
    flake8>=5
    pytest>=6
    mypy>=0.91
    black>=22.1
